# token-verification

./: README.md  com.zuel.vjohn.TokenVerification.json  com.zuel.vjohn.TokenVerification.json~  meson.build
data/: certs.json  com.zuel.vjohn.TokenVerification.appdata.xml.in  com.zuel.vjohn.TokenVerification.desktop.in  com.zuel.vjohn.TokenVerification.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  tokenverification.gresource.xml
src/gui/: TokenApplication.vala  TokenJsAdapter.vala  TokenWindow.ui  TokenWindow.vala  index.html  index.html.feb14  main.vala  token.html  tokenfinal.html  tokenlocal.html  tokenlogin.html  tokensso.html  tokenvj.html
src/server/: TokenConfigServer.vala  TokenConfigServerInterface.vala  main.vala
